# neural-oddyssey-AI-entry

./: CMakeLists.txt  LICENSE  README.md  makefile
src/: det_pose.cpp
